--- a/HourFlow-Compleet/vercel.json
+++ b/HourFlow-Compleet/vercel.json
@@ -2,6 +2,12 @@
   "version": 2,
   "routes": [
     { "handle": "filesystem" },
+    { "src": "/api/(.*)", "dest": "/api/$1" },
     { "src": "/(.*)", "dest": "/index.html" }
-  ]
+  ],
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs18.x"
+    }
+  }
 }
